--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -214,6 +214,72 @@
   }
 }
 
+// house create
+.editContainer {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 5%;
+  .createTitle {
+    margin: 6% auto 6% 20%;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 25px;
+  }
+  .createBox {
+    display: flex;
+    flex-direction: column;
+    width: 40%;
+    margin-left: 30%;
+    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+    padding: 40px;
+  }
+  .frames {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 280px;
+    border: 1px dashed #979797;
+    box-sizing: border-box;
+    border-radius: 10px;
+    .imgAttached {
+      height: 100%;
+      width: 100%;
+      cursor: pointer;
+      border-radius: 10px;
+    }
+  }
+  .fileUpload {
+      display: none;
+  }
+  .helpContainer {
+    display: flex;
+    align-items: baseline;
+    .help {
+      width: 16px;
+      height: 16px;
+      margin-left: 8px;
+    }
+  }
+  .inputContainer {
+    display: flex;
+    flex-direction: column;
+    margin-top: 50px;
+  }
+  .inputRow {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 50px;
+    width: 100%;
+    .inputItem {
+      display: flex;
+      flex-direction: column;
+      width: 45%;
+    }
+  }
+}
+
 .selectInput {
   height: 55px;
   border-radius: 5px;
