--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -136,7 +136,7 @@
   .recommendation {
     margin-top: 10px;
     .replaceYr {
-      border: 2px solid #D22E2E;
+      // border: 2px solid #D22E2E;
       padding: 4px;
     }
     .replaceTitle {
