--- a/src/MainContainer/Main.scss
+++ b/src/MainContainer/Main.scss
@@ -18,11 +18,12 @@
           margin-top: 7%;
         }
       #h1 {
-        font-size: 36px;
+        font-size: 30px;
         margin-left: 2%;
         margin-right: 2%;
         // margin-bottom: 4%;
         text-align: center;
+        font-weight: 700;
       }
       #text {
         font-size: 16px;
