--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -203,16 +203,22 @@
       background-color: white;
       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
       width: 450px;
-      height: 330px;
-      padding: 1%;
+      height: 343px;
+      padding: 2px;
       .sampleImg {
         border-radius: 10px;
-        height: 280px;
+        width: 90%;
+        height: 80%;
+        margin-left: 5%;
+        margin-top: 3%;
       }
       .sampleText {
         color: black;
-        margin-top: 5%;
-        margin-bottom: 5%;
+        width: 90%;
+        margin-left: 5%;
+        height: 20%;
+        padding-top: 2%;
+        text-align: center;
       }
     }
   }
@@ -235,92 +241,6 @@
   }
 }
 
-// house create
-.editContainer {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 5%;
-  .createTitle {
-    margin: 6% auto 6% 20%;
-    font-weight: 600;
-    font-size: 20px;
-    line-height: 25px;
-  }
-  .createBox {
-    display: flex;
-    flex-direction: column;
-    width: 40%;
-    margin-left: 30%;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    padding: 40px;
-  }
-  .frames {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 280px;
-    border: 1px dashed #979797;
-    box-sizing: border-box;
-    border-radius: 10px;
-    .imgAttached {
-      height: 100%;
-      width: 100%;
-      cursor: pointer;
-      border-radius: 10px;
-    }
-  }
-  .fileUpload {
-      display: none;
-  }
-  .helpContainer {
-    display: flex;
-    align-items: baseline;
-    .help {
-      width: 16px;
-      height: 16px;
-      margin-left: 8px;
-    }
-    .tooltipContainer {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      text-align: center;
-      border-radius: 10px;
-      background-color: white;
-      box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-      width: 450px;
-      height: 330px;
-      padding: 1%;
-      .sampleImg {
-        // border-radius: 10px;
-        height: 280px;
-      }
-      .sampleText {
-        color: black;
-        margin-top: 5%;
-        margin-bottom: 5%;
-      }
-    }
-  }
-  .inputContainer {
-    display: flex;
-    flex-direction: column;
-    margin-top: 50px;
-  }
-  .inputRow {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    margin-top: 50px;
-    width: 100%;
-    .inputItem {
-      display: flex;
-      flex-direction: column;
-      width: 45%;
-    }
-  }
-}
 
 .selectInput {
   height: 55px;
@@ -365,10 +285,39 @@
       height: 16px;
       margin-left: 8px;
     }
+    .tooltipContainer {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      text-align: center;
+      border-radius: 10px;
+      background-color: white;
+      box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+      width: 450px;
+      height: 343px;
+      padding: 2px;
+      .sampleImg {
+        border-radius: 10px;
+        width: 90%;
+        height: 80%;
+        margin-left: 5%;
+        margin-top: 3%;
+      }
+      .sampleText {
+        color: black;
+        width: 90%;
+        margin-left: 5%;
+        height: 20%;
+        padding-top: 2%;
+        text-align: center;
+      }
+    }
   }
   .frames {
     display: flex;
     height: 280px;
+    justify-content: center;
+    align-items: center;
     border: 1px dashed #979797;
     box-sizing: border-box;
     border-radius: 10px;
