--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -124,7 +124,7 @@
         margin-bottom: 5%;
 
         .analysisName {
-          font-weight: bold;
+          font-weight: 400;
           align-self: center;
         }
       }
