--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -52,6 +52,7 @@
   align-items: center;
   text-decoration: none;
   color: #FA910B;
+  border: 1px solid red;
   .blankFrame {
     width: 270px;
     height: 150px;
