--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -183,6 +183,9 @@
       cursor: pointer;
       border-radius: 10px;
     }
+    .placer {
+      width: 30%;
+    }
   }
   .fileUpload {
       display: none;
