--- a/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
+++ b/src/MyCasaComponents/MyCasaDashboard/MyCasaDashboard.scss
@@ -356,6 +356,9 @@
       cursor: pointer;
       border-radius: 10px;
     }
+    .placer {
+      width: 30%;
+    }
   }
   .fileUpload {
     border: 1px solid red;
