--- a/src/MyProjectComponents/MyProject.scss
+++ b/src/MyProjectComponents/MyProject.scss
@@ -161,13 +161,12 @@
     border-radius: 10px;
     color: white;
     text-align: left;
-    margin-left: 2%;
     .barText {
       transform: skew(-30deg);
       padding-left: 5%;
     }
     .red_level {
-        width: 5%;
+        width: 24%;
         height: 100%;
         background-color: #D22E2E;
         float: left;
@@ -175,7 +174,7 @@
         margin-right: 1%;
     }
     .orange_level {
-        width: 30%;
+        width: 24%;
         height: 100%;
         background-color: #FA910B;
         float: left;
@@ -184,7 +183,7 @@
     }
 
     .yellow_level {
-        width: 30%;
+        width: 24%;
         height: 100%;
         background-color: #FDC825;
         float: left;
@@ -193,7 +192,7 @@
 
     }
     .green_level {
-        width: 30%;
+        width: 24%;
         height: 100%;
         background-color: #139929;
         float: left;
@@ -204,29 +203,33 @@
   .inches {
     width: 100%;
     height: 30px;
-    margin-left: 5%;
+    // margin-left: 5%;
     .redIn {
-        width: 5%;
+        width: 24%;
         height: 100%;
         float: left;
+        text-align: center;
+        margin-right: 1%;
     }
     .orangeIn {
-        width: 30%;
+        width: 24%;
         height: 100%;
         float: left;
-        padding-left: 12%;
+        text-align: center;
+        margin-right: 1%;
     }
     .yellowIn {
-        width: 30%;
+        width: 24%;
         height: 100%;
         float: left;
-        padding-left: 12%;
+        text-align: center;
+        margin-right: 1%;
     }
     .greenIn {
-        width: 30%;
+        width: 24%;
         height: 100%;
         float: left;
-        padding-left: 12%;
+        text-align: center;
     }
   }
 }
@@ -243,53 +246,66 @@
     border-radius: 10px;
     color: white;
     text-align: left;
-    margin-left: 2%;
+
     .barText {
-      transform: skew(-30deg);
+      // transform: skew(-30deg);
       padding-left: 5%;
     }
+    .red_level {
+        width: 25%;
+        height: 100%;
+        background-color: #D22E2E;
+        float: left;
+        // transform: skew(30deg);
+
+    }
     .orange_level {
-        width: 32%;
+        width: 25%;
         height: 100%;
         background-color: #FA910B;
         float: left;
-        transform: skew(30deg);
-        margin-right: 1%;
+        // transform: skew(30deg);
+
     }
     .yellow_level {
-        width: 32%;
+        width: 25%;
         height: 100%;
         background-color: #FDC825;
         float: left;
-        transform: skew(30deg);
-        margin-right: 1%
+        // transform: skew(30deg);
+
     }
     .green_level {
-        width: 32%;
+        width: 25%;
         height: 100%;
         background-color: #139929;
         float: left;
-        transform: skew(30deg);
+        // transform: skew(30deg);
     }
   }
   .inches {
     width: 100%;
     height: 30px;
-    margin-left: 3%;
+    .redIn {
+        width: 25%;
+        height: 100%;
+        float: left;
+        text-align: center;
+    }
     .orangeIn {
-        width: 32%;
+        width: 25%;
         height: 100%;
         float: left;
         text-align: center;
     }
     .yellowIn {
-        width: 33%;
+        width: 25%;
         height: 100%;
         float: left;
         text-align: center;
     }
     .greenIn {
-        width: 33%;
+        width: 25%;
         height: 100%;
         float: left;
         text-align: center;
