--- a/src/ElectrifyComponents/ElectrifyComponents.scss
+++ b/src/ElectrifyComponents/ElectrifyComponents.scss
@@ -120,6 +120,103 @@
   and (min-device-width: 320px)
   and (max-device-width: 568px)
   and (-webkit-min-device-pixel-ratio: 2) {
+    .electrify_container {
+      width: 70%;
+      margin-left: 15%;
+      margin-top: 4%;
+      .item_container {
+        display: flex;
+        margin-top: 4%;
+        .img_sub {
+          display: flex;
+          flex-direction: column;
+          .electri_box {
+            width: 250px;
+            height: 198.33px;
+            box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+            border-radius: 10px;
+            // align-items: center;
+            margin-bottom: 25%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            img {
+              width: 108.28px;
+              height: 125.23px;
+            }
+          }
+          .electri_text {
+            text-align: center;
+          }
+        }
+        .text_sub {
+          width: 80%;
+          margin-left: 10%;
+        .p1, .p2, .p3, .p4 {
+          margin-bottom: 5%;
+        }
+        }
+      }
+    }
+
+
+    /* ----------- iPhone 4 and 4S ----------- */
+
+    /* Portrait and Landscape */
+    @media only screen
+      and (min-device-width: 320px)
+      and (max-device-width: 480px)
+      and (-webkit-min-device-pixel-ratio: 2) {
+        .electrify_container {
+          width: 90%;
+          margin-left: 5%;
+          margin-top: 4%;
+          margin-bottom: 4%;
+          .item_container {
+            display: flex;
+            flex-direction: row;
+            margin-top: 8%;
+            justify-content: center;
+            align-items: center;
+            .img_sub {
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              align-items: center;
+              .electri_box {
+                width: 230px;
+                height: 140px;
+                box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+                border-radius: 10px;
+                // align-items: center;
+                margin-bottom: 15%;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                img {
+                  width: 60px;
+                  height: auto;
+                  padding-top: 10%;
+                  padding-bottom: 10%;
+                }
+              }
+              .electri_text {
+                margin-bottom: 5%;
+              }
+            }
+            .text_sub {
+              width: 80%;
+              margin-left: 10%;
+              text-align: left;
+            .p1, .p2, .p3, .p4 {
+              margin-bottom: 5%;
+              }
+            }
+          }
+        }
+
+    }
+
 
 }
 
