--- a/src/HomeContainer/Home.scss
+++ b/src/HomeContainer/Home.scss
@@ -50,6 +50,44 @@
 
 
 
+@media only screen and (max-width: 1000px){
+    .homeContainer {
+
+      .electrifyContainer {
+        display: flex;
+        flex-direction: row;
+        .electrifyRow {
+          display: flex;
+          flex-direction: column;
+        }
+      }
+      .iconContainer {
+        display: flex;
+        flex-direction: column;
+        margin-left: 0px;
+        width: 100%;
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        text-decoration: none;
+        .iconBox {
+          display: flex;
+          flex-direction: column;
+          justify-content: center;
+          align-items: center;
+          text-align: center;
+          .iconImg {
+            width: 60%;
+            // height: 80%;
+          }
+          .iconText {
+            color: 'black'
+          }
+        }
+      }
+    }
+
+}
+
 /* ----------- iPhone 4 and 4S ----------- */
 
 /* Portrait and Landscape */
