--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -45,37 +45,54 @@
 
 @media only screen and (max-width: 900px){
   .navContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     height: auto;
-    .navRow {
-      display: flex;
-      flex-direction: column;
-      .logContainer {
-        .logoImg {
-          img {
-            height: 50px;
-          }
-            margin-right: 8px;
-        }
-        .logoText {
-          img {
-            height: 17px;
-          }
-        }
-      }
-    }
     .navSecond {
       display: flex;
-      flex-direction: column;
-      align-items: flex-end;
-      width: 80%;
+      flex-direction: row;
+      width: 100%;
+      margin-top: 5%;
+      margin-bottom: 5%;
       .navItem {
-        width: 90%;
+        width: 100%;
       }
     }
+    .navLog {
+      margin-top: 5%;
+      margin-bottom: 5%;      
+    }
+
   }
-  #loginSolo {
-    margin-right: 30px;
-  }
+  // .navContainer {
+  //   height: auto;
+  //   display: flex;
+  //   flex-direction: column;
+  //   .navRow {
+  //     display: flex;
+  //     justify-content: center;
+  //   }
+  //   .navSecond {
+  //     display: flex;
+  //     flex-direction: column;
+  //     width: 80%;
+  //     .navItem {
+  //       width: 100%;
+  //       text-align: center;
+  //       padding-top: 1%;
+  //       padding-bottom: 1%;
+  //       bor
+  //     }
+  //   }
+  // }
+  // .navContainer #myaccount {
+  //   margin-left: 0
+  // }
+  //
+  // #loginSolo {
+  //   margin-right: 30px;
+  // }
 }
 
 
