--- a/src/RegisterLoginContainer/RegisterLogin.scss
+++ b/src/RegisterLoginContainer/RegisterLogin.scss
@@ -24,6 +24,14 @@
   height: 40px;
 }
 
+@media only screen and (max-width: 900px){
+  .loginContainer, .registerContainer {
+    width: 90%;
+    margin-left: 5%;
+    margin-bottom: 5%;
+  }
+}
+
 /* ----------- iPhone 4 and 4S ----------- */
 
 /* Portrait and Landscape */
