--- a/src/MainContainer/Main.scss
+++ b/src/MainContainer/Main.scss
@@ -79,7 +79,11 @@
     }
 
     .right  {
-      margin-left: 50%;
+      margin-left: 40%;
+      border: 1px red solid;
+    }
+    .box {
+      width: 100%;
     }
 }
 
