changed soem calcualtion

--- a/src/MainContainer/Main.scss
+++ b/src/MainContainer/Main.scss
@@ -80,7 +80,7 @@
 
     .right  {
       margin-left: 40%;
-      border: 1px red solid;
+      // border: 1px red solid;
     }
     .box {
       width: 100%;
