--- a/src/Nav/Nav.scss
+++ b/src/Nav/Nav.scss
@@ -1,5 +1,5 @@
-$nav_color :  #E5E5E5;
-$nav_font : Muli;
+$nav_color: #e5e5e5;
+$nav_font: "Mulish", sans-serif;
 
 .container_nav {
   display: flex;
