--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-.h2 {
-  font-size: 28px;
-  font-weight: bold;
-}
-
 .submitBtn {
   background: #139929;
   border-radius: 5px;
@@ -15,4 +10,7 @@
   display: flex;
   align-items: center;
   letter-spacing: 0.03em;
+}
+* {
+  font-family: "Mulish", sans-serif;
 }
