--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,13 @@
-<<<<<<< HEAD
-.submitBtn {
-  background: #139929;
-  border-radius: 5px;
-  height: 50px;
-  font-size: 18px;
-  color: white;
-  justify-content: center;
-  text-decoration: none;
-  font-weight: 900;
-  display: flex;
-  align-items: center;
-  letter-spacing: 0.03em;
-}
-* {
-  font-family: "Mulish", sans-serif;
-=======
 /* color palette */
 /* green :  #139929 */
 /* orange : #FA910B */
 
 /* input */
+
+* {
+  font-family: "Mulish", sans-serif;
+}
+
 input {
   border: 1px solid #979797;
   box-sizing: border-box;
@@ -49,7 +37,7 @@ input {
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #FA910B;
+  background-color: #fa910b;
   color: white;
   border-radius: 5px;
   font-size: 18px;
@@ -64,7 +52,7 @@ input {
 }
 
 * {
-  font-family: 'Mulish', sans-serif;
+  font-family: "Mulish", sans-serif;
 }
 
 /* 28px */
@@ -109,7 +97,6 @@ input {
   color: black;
 }
 
-
 .inputContainer {
   display: flex;
   flex-direction: column;
@@ -122,5 +109,4 @@ input {
 
 .checkNext {
   margin-right: 4%;
->>>>>>> 2fbb785c0c6f29901581b02c45551440a3e4b70c
 }
