--- a/src/HomeContainer/Home.scss
+++ b/src/HomeContainer/Home.scss
@@ -1,86 +1,99 @@
 .homeContainer {
-  width: 80%;
-  margin-left: 10%;
-  margin-top: 5%;
-  margin-bottom: 10%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  .subtitle {
-    margin-top: 22px;
-  }
-  .electrifyContainer {
-    display: flex;
-    flex-direction: column;
-    margin-top: 55px;
-    .electrifyRow {
-      display: flex;
-      flex-direction: row;
-    }
-  }
-  .iconContainer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin-left: 42px;
-    width: 200px;
-    height: 158px;
-    box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 10px;
-    text-decoration: none;
-    .iconBox {
-      .iconImg {
-        width: 100px;
-        height: 100px;
-      }
-      .iconText {
-        color: "black";
-      }
-    }
-  }
-}
-
-#electrifyTop {
-  margin-bottom: 65px;
-}
-
-@media only screen and (max-width: 1000px) {
-  .homeContainer {
-    .electrifyContainer {
-      display: flex;
-      flex-direction: row;
-      .electrifyRow {
-        display: flex;
-        flex-direction: column;
-      }
-    }
-    .iconContainer {
-      display: flex;
-      flex-direction: column;
-      margin-left: 0px;
-      width: 100%;
-      box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
-      border-radius: 10px;
-      text-decoration: none;
-      .iconBox {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        .iconImg {
-          width: 60%;
-          // height: 80%;
-        }
-        .iconText {
-          color: "black";
+  &__contentContainer {
+    &--list {
+      &--item {
+        &-img {
+          width: 100px;
+          height: 100px;
         }
       }
     }
   }
 }
+
+// .homeContainer {
+//   width: 80%;
+//   margin-left: 10%;
+//   margin-top: 5%;
+//   margin-bottom: 10%;
+//   display: flex;
+//   flex-direction: column;
+//   justify-content: center;
+//   align-items: center;
+//   .subtitle {
+//     margin-top: 22px;
+//   }
+//   .electrifyContainer {
+//     display: flex;
+//     flex-direction: column;
+//     margin-top: 55px;
+//     .electrifyRow {
+//       display: flex;
+//       flex-direction: row;
+//     }
+//   }
+//   .iconContainer {
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+//     margin-left: 42px;
+//     width: 200px;
+//     height: 158px;
+//     box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+//     border-radius: 10px;
+//     text-decoration: none;
+//     .iconBox {
+//       .iconImg {
+//         width: 100px;
+//         height: 100px;
+//       }
+//       .iconText {
+//         color: "black";
+//       }
+//     }
+//   }
+// }
+//
+// #electrifyTop {
+//   margin-bottom: 65px;
+// }
+//
+// @media only screen and (max-width: 1000px) {
+//   .homeContainer {
+//     .electrifyContainer {
+//       display: flex;
+//       flex-direction: row;
+//       .electrifyRow {
+//         display: flex;
+//         flex-direction: column;
+//       }
+//     }
+//     .iconContainer {
+//       display: flex;
+//       flex-direction: column;
+//       margin-left: 0px;
+//       width: 100%;
+//       box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+//       border-radius: 10px;
+//       text-decoration: none;
+//       .iconBox {
+//         display: flex;
+//         flex-direction: column;
+//         justify-content: center;
+//         align-items: center;
+//         text-align: center;
+//         .iconImg {
+//           width: 60%;
+//           // height: 80%;
+//         }
+//         .iconText {
+//           color: "black";
+//         }
+//       }
+//     }
+//   }
+// }
 
 /* ----------- iPhone 4 and 4S ----------- */
 
