--- a/src/HomeContainer/Home.scss
+++ b/src/HomeContainer/Home.scss
@@ -2,6 +2,15 @@
   &__contentContainer {
     &--list {
       &--item {
+        width: 200px;
+        height: 158px;
+        box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        text-decoration: none;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
         &-img {
           width: 100px;
           height: 100px;
