--- a/src/LandingPage/SubMid/MidSubComponents/MidSubComponent.scss
+++ b/src/LandingPage/SubMid/MidSubComponents/MidSubComponent.scss
@@ -1,7 +1,7 @@
 .custom-big-text {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 
 .custom-small-text {
-  font-size: 1.1rem;
+  font-size: 18px;
 }
