--- a/src/LandingPage/SubMid/LandingPageMid.scss
+++ b/src/LandingPage/SubMid/LandingPageMid.scss
@@ -6,3 +6,11 @@ $el-background: #fff1c5;
 h2 {
   font-size: 48px;
 }
+
+.custom-big-text {
+  font-size: 1.8rem;
+}
+
+.custom-small-text {
+  font-size: 18px;
+}
