--- a/src/RegisterLoginContainer/Register.scss
+++ b/src/RegisterLoginContainer/Register.scss
@@ -1,7 +1,24 @@
 .bordered {
   border: 1px solid #979797;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.25);
   //height: 80vh;
 }
+
+.custom-height {
+  height: 80vh;
+}
+
+.custom-width {
+  width: 39.6%;
+}
+
+@media (max-width: 800px) {
+  .custom-width {
+    width: 80%;
+  }
+}
+
+/*
 
 .loginContainer,
 .registerContainer {
@@ -42,6 +59,7 @@
 /* ----------- iPhone 4 and 4S ----------- */
 
 /* Portrait and Landscape */
+/*
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) {
   .loginContainer {
     width: 80%;
@@ -63,7 +81,7 @@
     }
   }
 }
-
+*/
 /* Portrait */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
 }
